# llm-from-scratch

./: .gitignore  AGENTS.md  CLAUDE.md  NORTH_STAR.md  PROGRESS.md  README.md  pyproject.toml
agentic-phase-runner-package/: .gitignore  FOLDER_OVERVIEW.md  LICENSE_NOTES.md  MIGRATION_NOTES.md  PACKAGE_MANIFEST.md  QUICKSTART.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
automation/: autopilot-config.json  phase-graph.json  phase-state.json
concept-and-ideas/: 01_NORTH_STAR_AND_VISION.md  02_STRUCTURE_AND_TECH_SPECS.md  03_EXAMPLES_SCENARIOS_AND_WORKFLOWS.md
configs/: corpus_v01.yaml  corpus_v01_tokenized.yaml  dummy.yaml  eval_fixed_prompts.yaml  inference_benchmark.yaml  inference_corpus_v01.yaml  inference_smoke.yaml  kgpt_100m.yaml  kgpt_30m.yaml  kgpt_30m_corpus_v01.yaml  kgpt_50m.yaml  kgpt_tiny.yaml  kgpt_tiny_tokenized.yaml  micro_char.yaml  sft_eval.yaml  sft_smoke.yaml  tokenized_smoke.yaml  tokenizer_bilingual.yaml  tokenizer_corpus_v01.yaml  transformer_micro.yaml
corpus/: __init__.py  audit_sources.py  clean.py  cleaning.py  download.py  source_registry.py  split_manifest.py  splitting.py
data/: README.md
docs/: ARTIFACT_INDEX.md  COMMAND_INDEX.md  DATA_CARD.md  FINAL_WRITEUP.md  MODEL_CARD.md  NORTH_STAR_LLM_FROM_SCRATCH_MAC.md  checkpoint_manifest.json  checkpoint_manifest_corpus_v01.json  claim_evidence_audit.md  corpus_v01_dataset_manifest.json  corpus_v01_source_manifest.md  corpus_v01_tokenized_manifest.json  phase01a_micro_char_report.md  phase02a_data_manifest.json  phase03a_transformer_architecture.md  (+21 more)
(+218 files in other folders)
